--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -2,4 +2,5 @@
   <!-- Default screen margins, per the Android Design guidelines. -->
     <dimen name="login_font_size">16sp</dimen>
   <dimen name="edittext_height">35dp</dimen>
+    <dimen name="edit_drawable_height">24dp</dimen>
 </resources>
