--- a/app/src/main/res/layout/adapter_bookmark.xml
+++ b/app/src/main/res/layout/adapter_bookmark.xml
@@ -36,13 +36,13 @@
                         style="@style/font_medium_bold"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:text="@{adapterBookmarkVM.getCurrentBookmark(position).plotNo}"/>
+                        android:text="@{adapterBookmarkVM.getCurrentBookmark(position).ParcelNumber}"/>
                 </LinearLayout>
                 <TextView
                     style="@style/font_medium_regular"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="@{adapterBookmarkVM.getCurrentBookmark(position).area}"/>
+                    android:text="@{adapterBookmarkVM.getCurrentBookmark(position).Area}"/>
             </LinearLayout>
             <LinearLayout
                 android:layout_width="match_parent"
@@ -53,18 +53,21 @@
                 <ImageView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
+                    android:id="@+id/gotomap"
                     android:src="@drawable/ic_pin_drop_24dp"
                     android:layout_gravity="center_vertical"
                     android:layout_weight="1"/>
                 <ImageView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
+                    android:id="@+id/delete"
                     android:src="@drawable/ic_close_24dp"
                     android:layout_gravity="center_vertical"
                     android:layout_weight="1"/>
                 <ImageView
                     android:layout_width="30dp"
                     android:layout_height="30dp"
+                    android:id="@+id/gotomakani"
                     android:src="@drawable/makani"
                     android:layout_gravity="center_vertical"
                     android:layout_weight="1"/>
