--- a/app/src/main/res/layout/adapter_grid_menu.xml
+++ b/app/src/main/res/layout/adapter_grid_menu.xml
@@ -10,14 +10,17 @@
             type="dm.sime.com.kharetati.view.viewModels.HomeViewModel" />
     </data>
     <androidx.cardview.widget.CardView
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="100dp"
+        android:id="@+id/cardHomeGrid"
         android:elevation="10dp"
+        android:background="@drawable/grid_background_drawable"
         android:layout_margin="5dp"
         app:cardCornerRadius="5dp">
         <RelativeLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
+            android:background="@drawable/grid_background_drawable"
             android:layout_margin="5dp">
             <ImageView
                 android:id="@+id/imgMenuIcon"
@@ -29,20 +32,22 @@
                 android:layout_marginVertical="10dp"/>
             <TextView
                 android:layout_below="@+id/imgMenuIcon"
-                android:layout_width="match_parent"
-                android:textSize="15dp"
+                android:layout_width="wrap_content"
+                android:textSize="12sp"
                 android:layout_height="wrap_content"
                 android:text="@{adapterGridMenuVM.getCurrentHomeGridMenuItems(position).nameEn}"
                 android:fontFamily="@font/dubai_font"
                 android:maxLines="2"
+                android:layout_centerHorizontal="true"
                 android:textAlignment="center"
+                android:gravity="center"
                 android:textColor="@color/black"
                 android:layout_alignParentBottom="true"/>
             <TextView
                 android:id="@+id/txtAppId"
                 android:layout_below="@+id/imgMenuIcon"
-                android:layout_width="match_parent"
-                android:textSize="15dp"
+                android:layout_width="wrap_content"
+                android:textSize="12sp"
                 android:layout_height="wrap_content"
                 android:text="@{adapterGridMenuVM.getCurrentHomeGridMenuItems(position).id}"
                 android:visibility="invisible"
