--- a/app/src/main/res/layout/adapter_mymap.xml
+++ b/app/src/main/res/layout/adapter_mymap.xml
@@ -18,14 +18,16 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
+            android:weightSum="3"
             android:orientation="vertical">
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:orientation="horizontal"
+                android:minHeight="48dp"
                 android:weightSum="2"
                 android:layout_marginVertical="20dp"
-                android:layout_margin="10dp">
+                android:layout_margin="8dp">
                 <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
@@ -35,94 +37,136 @@
                     <LinearLayout
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:orientation="horizontal">
-                        <TextView
-                            style="@style/font_medium_regular"
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:text="plot no "/>
+                        android:orientation="vertical">
                         <TextView
                             style="@style/font_medium_bold"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
+                            android:layout_marginHorizontal="5dp"
+                            android:text="@string/plot_no"/>
+                        <TextView
+                            style="@style/font_medium_regular"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_marginHorizontal="5dp"
+                            android:layout_marginVertical="5dp"
                             android:text="@{adapterMyMapVM.getCurrentMyMap(position).parcel_id}"/>
                     </LinearLayout>
                     <View
                         android:layout_width="1dp"
                         android:layout_height="match_parent"
-                        android:layout_marginHorizontal="10dp"
+                        android:layout_marginHorizontal="8dp"
                         android:background="@color/common_google_signin_btn_text_light_default"/>
+                    <LinearLayout
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:orientation="vertical"
+                        android:weightSum="2">
+                    <TextView
+                        style="@style/font_medium_bold"
+                        android:layout_width="wrap_content"
+                        android:layout_height="match_parent"
+                        android:text="@string/LBL_REQUEST_STATUS"
+                        android:id="@+id/status"
+                        android:maxLines="1"
+                        android:layout_marginStart="5dp"
+                        android:layout_weight="1"/>
                     <TextView
                         style="@style/font_medium_regular"
                         android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:text="@{adapterMyMapVM.getCurrentMyMap(position).area}"
-                        android:layout_marginHorizontal="5dp"
+                        android:layout_height="match_parent"
+                        android:id="@+id/reqStatus"
+                        android:maxLines="2"
+                        android:singleLine="false"
+                        android:ellipsize="none"
+                        android:inputType="textMultiLine"
+                        android:text=""
+                        android:layout_marginStart="5dp"
+                        android:layout_marginTop="5dp"
                         android:layout_weight="1"/>
+                    </LinearLayout>
                     <View
                         android:layout_width="1dp"
                         android:layout_height="match_parent"
-                        android:layout_marginHorizontal="10dp"
+                        android:layout_marginHorizontal="8dp"
                         android:background="@color/common_google_signin_btn_text_light_default"/>
+                    <LinearLayout
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:orientation="vertical"
+                        android:weightSum="2">
+                    <TextView
+                        style="@style/font_medium_bold"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="@string/LBL_DATE_TIME"
+                        android:layout_marginStart="5dp"
+                        android:layout_weight="1"/>
                     <TextView
                         style="@style/font_medium_regular"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
+                        android:maxLines="2"
+                        android:layout_marginTop="5dp"
                         android:text="@{adapterMyMapVM.getCurrentMyMap(position).req_created_date}"
-                        android:layout_marginHorizontal="5dp"
-                        android:layout_weight="1"/>
+                        android:layout_marginStart="5dp"
+                        android:layout_weight="1"/></LinearLayout>
                 </LinearLayout>
+
             </LinearLayout>
+
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:layout_weight="1"
+                android:layout_margin="4dp"
                 android:orientation="horizontal"
                 android:weightSum="2">
                 <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
-                    android:layout_weight="1"
+                    android:layout_weight="1.3"/>
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:layout_weight=".7"
+                    android:gravity="end"
                     android:orientation="horizontal"
                     android:weightSum="3">
                     <ImageView
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:src="@drawable/ic_pin_drop_24dp"
-                        android:layout_gravity="center_vertical"
-                        android:layout_weight="1"/>
-                    <ImageView
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:src="@drawable/ic_edit_24dp"
-                        android:layout_gravity="center_vertical"
-                        android:layout_weight="1"/>
-                    <ImageView
-                        android:layout_width="30dp"
-                        android:layout_height="30dp"
-                        android:src="@drawable/ic_delete_24dp"
-                        android:layout_gravity="center_vertical"
-                        android:layout_weight="1"/>
-                </LinearLayout>
-                <LinearLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:layout_weight="1"
-                    android:gravity="end">
-                    <TextView
-                        style="@style/font_medium_regular"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:text="Open With Makani"
+                        android:id="@+id/view"
+                        android:src="@drawable/document_icon"
                         android:layout_gravity="center_vertical|end"
-                        android:gravity="end"/>
+                        android:layout_weight="1"/>
                     <ImageView
-                        android:layout_width="30dp"
-                        android:layout_height="30dp"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:id="@+id/gotomakani"
                         android:src="@drawable/makani"
                         android:layout_gravity="center_vertical|end"
-                        android:gravity="end"/>
+                        android:layout_weight="1"/>
+
+                    <Button
+                        android:id="@+id/siteplan_payButton"
+                        android:layout_width="30dp"
+                        android:layout_height="23dp"
+                        android:textColor="@color/white"
+                        android:textSize="13dp"
+                        android:layout_marginRight="10dp"
+                        android:layout_gravity="center_vertical|center_horizontal"
+                        android:layout_weight="1"
+                        android:background="@drawable/gradient_background"
+                        android:text="@string/pay"
+                        android:textFontWeight="600"
+                        android:textAllCaps="false"
+                        android:contentDescription="@string/pay"
+                        android:scaleType="centerInside"
+                        android:src="@drawable/makani"/>
+
                 </LinearLayout>
+
             </LinearLayout>
 
         </LinearLayout>
